# desktop

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  brain.py  build-sidecar.py  capture.py  package-lock.json  package.json  requirements.txt  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
app/: main.css
app/lib/: hooks.ts  init.ts  tauri.ts  types.ts
app/windows/answer/: App.tsx
app/windows/control/: App.tsx  main.tsx
app/windows/dashboard/: App.tsx  types.ts
app/windows/dashboard/components/: AgentCard.tsx  AgentDetail.tsx  AgentForm.tsx  ChatsPage.tsx  DevConsole.tsx  GradientSpinner.tsx  SettingsPage.tsx
app/windows/input/: App.tsx
app/windows/overlay/: App.tsx
app/windows/settings/: App.tsx
app/windows/splash/: App.tsx
pages/: answer.html  control.html  dashboard.html  input.html  overlay.html  settings.html  splash.html
sidecar/: server.py
src/: answer.css  answer.html  answer.js  control.css  control.html  control.js  input.css  input.html  input.js  overlay.css  overlay.html  overlay.js  settings.css  settings.html  settings.js  splash.css  splash.html  splash.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
