[package]
name = "nudge"
version = "0.1.0"
edition = "2021"

[lib]
name = "nudge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nudge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
open = "5"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
